Add maxDepth configuration for .csproj file search and update related logic

--- a/package.json
+++ b/package.json
@@ -12,6 +12,17 @@
   "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
+    "configuration":{
+      "type": "object",
+      "title": "Extension Setting",
+      "properties": {
+        "usersecret.maxDepth":{
+          "type":"number",
+          "default":3,
+          "description": "Maximum depth for searching .csproj files."
+        }
+      }
+    },
     "commands": [
       {
         "command": "usersecret.userSecret",
