--- a/package.json
+++ b/package.json
@@ -2,23 +2,25 @@
   "name": "usersecret",
   "displayName": "UserSecret",
   "description": "manage .NET user secret",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.96.0"
   },
   "categories": [
     "Other"
   ],
+  "publisher": "MoHraiba",
+  "license":"MIT",
   "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
-    "configuration":{
+    "configuration": {
       "type": "object",
       "title": "Extension Setting",
       "properties": {
-        "usersecret.maxDepth":{
-          "type":"number",
-          "default":3,
+        "usersecret.maxDepth": {
+          "type": "number",
+          "default": 3,
           "description": "Maximum depth for searching .csproj files."
         }
       }
@@ -47,6 +49,7 @@
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
     "eslint": "^9.16.0",
+    "sinon": "^19.0.2",
     "typescript": "^5.7.2"
   },
   "dependencies": {
