Update README with usage section and add icon to package.json

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "Other"
   ],
   "publisher": "MoHraiba",
+  "icon": "images/asrar.jpg",
   "license":"MIT",
   "activationEvents": [],
   "main": "./out/extension.js",
