Enhance user secrets management: add context menu support and improve command handling

--- a/package.json
+++ b/package.json
@@ -46,6 +46,15 @@
         }
       }
     },
+    "menus": {
+      "explorer/context": [
+        {
+          "command": "dotnet.manageUserSecrets",
+          "when": "resourceExtname == .csproj",
+          "group": "navigation"
+        }
+      ]
+    },
     "commands": [
       {
         "command": "dotnet.manageUserSecrets",
