Update display name in package.json for consistency

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "usersecret",
-  "displayName": "Asrar.net",
+  "displayName": "Asrar",
   "description": "An extension to manage .NET projects user secrets file",
   "version": "0.6.2",
   "engines": {
