Change command group for user secrets management in package.json for better organization

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         {
           "command": "dotnet.manageUserSecrets",
           "when": "resourceExtname == .csproj",
-          "group": "navigation"
+          "group": "z_commands"
         }
       ]
     },
